Fix 'Cannot GET' error - Add root route and 404 handler to backend - Update BACKEND_URL to actual Render URL - Add troubleshooting guide

--- a/landing.html
+++ b/landing.html
@@ -1420,7 +1420,7 @@
                 return 'http://localhost:5055';
             }
             // Replace this with your Render backend URL after deployment
-            return 'https://YOUR-RENDER-APP.onrender.com'; // TODO: Update this with your Render URL
+            return 'https://vastu-e267.onrender.com'; // Render backend URL
         })();
 
         let currentTip = 0;
