Update Google Analytics tracking ID to G-MZYJK7SD7X - Updated GA4 Measurement ID in landing.html - Added documentation for SSL/HTTPS setup - Added Google Analytics verification guide

--- a/landing.html
+++ b/landing.html
@@ -6,12 +6,12 @@
     <title>Vastu Shastra - Harmony & Prosperity</title>
     
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BWK3769XRM"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-MZYJK7SD7X"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-BWK3769XRM');
+      gtag('config', 'G-MZYJK7SD7X');
     </script>
     
     <script src="https://cdn.tailwindcss.com"></script>
